--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -6,3 +6,13 @@ button, .btn {
   min-width: 48px;
   border: 1px solid #eee;
 }
+
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.text-left {
+  text-align: left;
+}
