--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -10,20 +10,24 @@
     margin-bottom: .75rem;
   }
   input[type="text"], input[type="email"], textarea {
-    display: inline-block;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
     padding: .5rem 0 .5rem 1rem;
     border: 1px solid #eee;
     &:focus {
-      border: 1px solid #42b983;
+      border: 1px solid #1067d7;
     }
   }
   button[type="submit"] {
     padding: 0.5rem 1.75rem;
     border: 1px solid #eee;
+    background-color: transparent;
     border-radius: .25rem;
     font-weight: bolder;
     &:hover {
-      border-color: #42b983;
+      border-color: #1067d7;
+      color: #1067d7;
     }
   }
 }
