--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -15,6 +15,7 @@
     width: 100%;
     padding: .5rem 0 .5rem 1rem;
     border: 1px solid #eee;
+    border-radius: 3px;
     &:focus {
       border: 1px solid #1067d7;
     }
