--- a/src/redux/blog/components/Posts.scss
+++ b/src/redux/blog/components/Posts.scss
@@ -10,5 +10,11 @@
         margin-bottom: 3rem;
       }
     }
+    .no-post {
+      padding: 2rem 0;
+      text-align: center;
+      font-weight: bolder;
+      font-style: italic;
+    }
   }
 }
