--- a/src/common/style/common.scss
+++ b/src/common/style/common.scss
@@ -1,4 +1,13 @@
+@import './reset.scss';
 @import './form.scss';
+html, body {
+  height: 100%;
+  overflow: auto;
+}
+body {
+  font: normal 14px/1.75 Akkurat Std,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  color: #333333;
+}
 
 button, .btn {
   display: inline-block;
