--- a/src/common/style/common.scss
+++ b/src/common/style/common.scss
@@ -7,6 +7,8 @@ html, body {
 body {
   font: normal 14px/1.75 Akkurat Std,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
   color: #333333;
+  word-break: break-all;
+  padding: 0 15px;
 }
 
 button, .btn {
@@ -24,4 +26,28 @@ button, .btn {
 }
 .text-left {
   text-align: left;
+}
+.weight-bold {
+  font-weight: 600;
+}
+.weight-bolder {
+  font-weight: 700;
+}
+strong {
+  font-weight: 700;
+}
+.nav-link {
+  text-decoration: underline;
+  &.nav-link-active {
+    font-weight: 700;
+  }
+}
+.red {
+  color: red;
+}
+.green {
+  color: green;
+}
+.blue {
+  color: blue;
 }
