set style for password filed

--- a/src/common/style/form.scss
+++ b/src/common/style/form.scss
@@ -9,7 +9,7 @@
     display: block;
     margin-bottom: .75rem;
   }
-  input[type="text"], input[type="email"], textarea {
+  input[type="text"], input[type="email"], textarea, input[type="password"] {
     display: block;
     box-sizing: border-box;
     width: 100%;
