enhance form example

--- a/src/common/style/form.scss
+++ b/src/common/style/form.scss
@@ -26,6 +26,7 @@
     background-color: transparent;
     border-radius: .25rem;
     font-weight: bolder;
+    transition: all ease 0.5s;
     &:hover {
       border-color: #1067d7;
       color: #1067d7;
