--- a/src/examples/react/10.formSample/index.scss
+++ b/src/examples/react/10.formSample/index.scss
@@ -9,7 +9,7 @@
     display: flex;
     margin-bottom: 15px;
     font-size: 14px;
-    .lable {
+    .label {
       min-width: 80px;
       font-weight: 600;
     }
